# llamatry

./: .gitignore  README.md  example.md  example.py  main.py  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/lightstep/: README.md  requirements.txt  server.py
examples/lightstep-llamaindex/: requirements.txt  server.py
examples/lightstep-llamaindex/data/: paul_essay.txt
llamatry/: README.md  __init__.py  completions.py  main.py  openai.py  pyproject.toml  trace.py
llamatry/llamatry/: __init__.py
llamatry/tests/: test_chatcompletions.py  test_completions.py
tests/: test_chatcompletions.py  test_completions.py  test_embeddings.py  test_trace.py  test_trace_args.py
